@@ -25,6 +25,6 @@ The \code{a4aFitCatchDiagn} class extends \code{FLQuants} to store information t
 \examples{
 data(ple4)
 data(ple4.index)
-obj <- sca(stock=ple4, indices=FLIndices(ple4.index))
-flqs <- residuals(obj, ple4, FLIndices(idx=ple4.index))
+fit <- sca(ple4, ple4.index)
+flqs <- computeCatchDiagnostics(fit, ple4)
 }
