@@ -4,12 +4,9 @@
 \alias{addition}
 \alias{+,FLStock,a4aFit-method}
 \alias{+,FLIndices,a4aFit-method}
-\alias{+,FLStock,a4aFitSA-method}
 \title{+ methods}
 \usage{
 \S4method{+}{FLStock,a4aFit}(e1, e2)
-
-\S4method{+}{FLIndices,a4aFit}(e1, e2)
 }
 \arguments{
 \item{e1}{the original \code{FLStock} or \code{FLIndex} object}
