@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/a4aFitresiduals-class.R,
-%   R/a4aFitCatchDiagn-class.R
+% Please edit documentation in R/a4aFitresiduals-class.R
 \docType{methods}
 \name{plot of residuals}
 \alias{plot of residuals}
@@ -8,8 +7,6 @@
 \title{Plot of standardized log residuals}
 \usage{
 \S4method{plot}{a4aFitResiduals,missing}(x, y = missing, auxline = "smooth", by = "year", ...)
-
-\S4method{plot}{a4aFitCatchDiagn,missing}(x, y = missing, ...)
 }
 \arguments{
 \item{x}{an \code{a4aFitResiduals} object with the standardized residuals}
@@ -24,20 +21,11 @@
 }
 \value{
 a \code{plot} with stardardized log residuals
-
-a \code{plot} with stardardized log residuals
 }
 \description{
 Method to produce scatterplots of standardized residuals
-
-Method to produce scatterplots of standardized residuals
 }
 \examples{
-data(ple4)
-data(ple4.index)
-obj <- sca(ple4, FLIndices(ple4.index))
-flqs <- residuals(obj, ple4, FLIndices(idx=ple4.index))
-plot(flqs)
 data(ple4)
 data(ple4.index)
 obj <- sca(ple4, FLIndices(ple4.index))
